# pepdocs

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
pepdocs/: __init__.py  __main__.py  _pepdocs.py
pepdocs/config/: __init__.py  pepdocs.toml
